[package]
name = "kotoist"
version = "0.1.0"
authors = ["Ales Tsurko <ales.tsurko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.2"
log = "0.4"
simple-logging = "2.0"
simplelog = "0.10"
vst-gui = { git = "https://github.com/mikesoylu/rust-vst-gui.git" }

[lib]
name = "kotoist"
crate-type = ["cdylib"]
