[package]
name = "kotoist"
version = "0.1.0"
authors = ["Ales Tsurko <ales.tsurko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
koto = { git = "https://github.com/koto-lang/koto.git" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-logging = "2.0"
simplelog = "0.10"
thiserror = "1.0"
vst = "0.2"
vst-gui = { git = "https://github.com/mikesoylu/rust-vst-gui.git" }

[lib]
name = "kotoist"
crate-type = ["cdylib"]
