[package]
name = "kotoist"
version = "0.2.0"
authors = { workspace = true }
edition = { workspace = true }

[lints.clippy]
module-inception = "allow"

[dependencies]
egui_code_editor = { git = "https://github.com/ales-tsurko/egui_code_editor.git", rev = "8539ebfb36c42d3873f1fe90fe7949462c8acf21" }
koto = "0.14.1"
koto_random = "0.14.1"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "standalone",
] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["rayon"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[lib]
name = "kotoist"
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]
